[gd_scene load_steps=3 format=2]

[ext_resource path="res://Resources/Puzzles/Puzzle.tscn" type="PackedScene" id=1]
[ext_resource path="res://Resources/Puzzles/Chapter V/Inductor/InductorQuestions.gd" type="Script" id=2]

[node name="InductorQuestions" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Background" parent="." index="0"]
color = Color( 0.45098, 0.45098, 0.45098, 1 )

[node name="InstructionLabel" type="Label" parent="." index="2"]
margin_left = 12.8299
margin_top = 8.16446
margin_right = 52.8299
margin_bottom = 22.1645
text = "Inductance is the circuit parameter used to 
describe an inductor. "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inductance" type="LineEdit" parent="InstructionLabel" index="0"]
margin_left = 0.00137329
margin_top = -2.00138
margin_right = 104.001
margin_bottom = 21.9986
rect_scale = Vector2( 0.7, 0.7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InstructionLabel2" type="Label" parent="." index="3"]
margin_left = 12.8299
margin_top = 46.6097
margin_right = 293.83
margin_bottom = 77.6097
text = "If the current is constant, the voltage across 
the ideal inductor is zero. "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Zero" type="LineEdit" parent="InstructionLabel2" index="0"]
margin_left = 130.978
margin_top = 14.2972
margin_right = 188.978
margin_bottom = 38.2972
rect_scale = Vector2( 0.7, 0.7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InstructionLabel3" type="Label" parent="." index="4"]
margin_left = 12.8299
margin_top = 89.4666
margin_right = 293.83
margin_bottom = 120.467
text = "Current cannot change instantaneously in an
inductor; that is, the current cannot 
change by a finite amount in zero time."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inductor" type="LineEdit" parent="InstructionLabel3" index="0"]
margin_left = -0.983566
margin_top = 15.3832
margin_right = 76.0164
margin_bottom = 39.3832
rect_scale = Vector2( 0.7, 0.7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Submit" type="Button" parent="." index="5"]
margin_left = 12.8606
margin_top = 148.326
margin_right = 69.8606
margin_bottom = 168.326
text = "Submit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WarningLabel" type="Label" parent="." index="6"]
margin_left = 74.5916
margin_top = 149.183
margin_right = 114.592
margin_bottom = 163.183
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="text_entered" from="InstructionLabel/Inductance" to="." method="_on_Inductance_text_entered"]
[connection signal="text_entered" from="InstructionLabel2/Zero" to="." method="_on_Zero_text_entered"]
[connection signal="text_entered" from="InstructionLabel3/Inductor" to="." method="_on_Inductor_text_entered"]
[connection signal="pressed" from="Submit" to="." method="_on_Submit_pressed"]
